tests/pass/test_nonetype.bb
none do_thing(float x, int y)
  if (x > 5.0)
    write "yay"
    return
  fin

  write "nay"
fin

do_thing(4.2, 3)
do_thing(7.1, 2)
