tests/fail/fail_return_type.bb
float spike(bool x, int y, float z)
  if x
    say y
    return 4
  fin
fin

spike(true, 5)
